# rust-riot-sys

./: .gitlab-ci.yml  Cargo.toml  README  README.md  README.tpl  build.rs  riot-all.h  riot-bindgen.h  riot-c2rust.h  riot-headers.h  riot-periph.h
.github/workflows/: buildtest.yml  formal.yml
src/: bindgen.rs  critical_section.rs  inline.rs  intrinsics_replacements.rs  lib.rs  libc.rs
