[package]
name = "riot-sys"
version = "0.7.9"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2018"

description = "Rust FFI wrappers for the RIOT operating system"
documentation = "https://rustdoc.etonomy.org/riot_sys/"
repository = "https://github.com/RIOT-OS/rust-riot-sys/"
keywords = ["riot", "riot-os", "iot", "bindings"]
categories = ["external-ffi-bindings", "no-std"]
license = "LGPL-2.1"

links = "riot-sys"

[dependencies]
cty = "^0.2"
c2rust-asm-casts = "0.2"
# Relevant for some boards like the wemos-zero
c2rust-bitfields = { version = "0.3", features = ["no_std"] }

# optionally use RIOT-rs's riot-build
riot-build = { version = "< 0.2.0", optional = true }
riot-rs-core = { version = "< 0.2.0", optional = true }

# atomic support
portable-atomic = {version = "1.0.1", features = ["critical-section"]}
critical-section = {version = "1.1.1", features = ["restore-state-bool"], optional = true} 

[build-dependencies]
bindgen = "^0.60.1"
shlex = "^1"
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
regex = "1"

[features]
# When this is active, the workarounds that keep C2Rust from generating extern
# types are disabled, and the library uses the nightly compiler feature
# `extern_types`.
keep-extern-types = []

# This prevents the `undef` of the dummy atomic definitions in
# `riot-c2rust.h` in case `stdatomic.h` is somewhere included.
# Note that these definitions are not realy atomics but placeholders.
# Thus a programm relying on the atomicity of the transpiled Rust structs
# will probably not work as intended.
dummy-atomic-definitions = []

# this needs to be set to build together with RIOT-rs.
riot-rs = [ "riot-build", "riot-rs-core", "keep-extern-types" ]
