[package]
name = "riot-sys"
version = "0.8.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2021"
rust-version = "1.64"

description = "Rust FFI wrappers for the RIOT operating system"
documentation = "https://rustdoc.etonomy.org/riot_sys/"
repository = "https://github.com/RIOT-OS/rust-riot-sys/"
keywords = ["riot", "riot-os", "iot", "bindings"]
categories = ["external-ffi-bindings", "no-std"]
license = "LGPL-2.1"

links = "riot-sys"

[dependencies]
# optionally use RIOT-rs's riot-build
riot-build = { version = "< 0.2.0", optional = true }
riot-rs-core = { version = "< 0.2.0", optional = true }

[build-dependencies]
# Generally that is 0.72.1 plus some recent changes -- but the one thing that
# matters over 0.72.1 is that it merges
# <https://github.com/rust-lang/rust-bindgen/pull/2403> to fix
# <https://github.com/rust-lang/rust-bindgen/issues/2991>, which affects only
# native32.
bindgen = { git = "https://github.com/chrysn-pull-requests/rust-bindgen", branch = "extended-floats"}
shlex = "^1.3"
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
regex = "1"

[features]
# When this is active, the workarounds that keep C2Rust from generating extern
# types are disabled, and the library uses the nightly compiler feature
# `extern_types`.
keep-extern-types = []

# this needs to be set to build together with RIOT-rs.
riot-rs = [ "riot-build", "riot-rs-core", "keep-extern-types" ]
